# TLS-Benchmarks

./: CMakeLists.txt  README.md  bench.py
.devcontainer/: Dockerfile
clients/: client.py
cmake/: boringssl.cmake  libressl.cmake  picotls.cmake
servers/: libre.cpp  open.cpp  pico_minicrypto.cpp  pico_openssl.cpp  server.py
